# edymobile_complete

./: CHANGELOG.md  CMakeLists.txt  README.md  bibliographie  package.xml
config/: diff_drive (copy).yaml  diff_drive.yaml  diffdrive.yaml
launch/: amcl_robot1.launch  amcl_robot2.launch  amcl_robot3.launch  amcl_robot4.launch  amcl_robot5.launch  controller_edymobiles.launch  diffdrive.launch  diffdrive_in_world (copy).launch  diffdrive_in_world.launch  diffdrive_test.launch  display.launch  edy_sim_drive.launch  edy_simple_controller.launch  edymobile_main.launch  gazebo (copy).launch  gazebo.launch  gazebo_swisscat_world.launch  jetson_nano_bot2.launch  joints.launch  main.launch  move_base_1.launch  move_base_2.launch  move_base_3.launch  move_base_4.launch  move_base_5.launch  navigation.launch  one_robot.launch  one_robot_with_name.launch  robots.launch  spawn_edymobiles.launch  theo_diffdrive.launch
maps/: circuit.pgm  circuit.yaml  circuit_MAPF.pgm  circuit_MAPF.yaml
param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rviz/: edy_world.rviz  navigation.rviz  navigation_bkp_version_Agatha.rviz  navigation_ns.rviz  test3.rviz
simulation/: package.xml
src/: agatha_generate_goals.py  brouillon.py  cbs.py  circuit_MAPF.txt  circuit_brouillon.txt  configrobots.ini  dummy.py  edy_controller_node.py  edy_controller_node_hardcoded.py  edy_controller_node_ori.py  generateMapTxt.py  generate_goals (copy).py  generate_goals.py  hungarian_algorithm.py  hungarian_algorithmV2.py  prioritized.py  (+4 more)
(+11 files in other folders)
